One more: Use Executors.newCachedThreadPool() for Android compatibility